Prevent horizontal scrolling on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@ html,
 body {
   height: 100%;
   background-color: #333;
+  overflow-x: hidden;
 }
 body {
   color: #fff;
